--- a/1-college website.html
+++ b/1-college website.html
@@ -1,3 +1,5 @@
-<body style="background-color: green">
-<a style="background-color: yellow" href="http://rmkcet.ac.in/index.php" target="_blank">Click here</a>
-</body>
+<html>
+    <body style="background-color: green">
+    <a style="background-color: yellow" href="http://rmkcet.ac.in/index.php" target="_blank">Click here</a>
+    </body>
+</html>
